--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="cell" data-cell></div>
     </div>
 
-    <div class="winning-message" id="winning-message">
+    <div class="winning-message" id="winningMessage">
         <div data-winning-message-text></div>
         <button id="restartButton">Restart</button>
     </div>
